bugfix: overflow das telas

--- a/src/pages/auth/style.css
+++ b/src/pages/auth/style.css
@@ -2,7 +2,8 @@
     display: flex;
     background-color: #1C1B1E;
     justify-content: space-between;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
     margin: 0;
 }
 
