--- a/src/pages/films/style.css
+++ b/src/pages/films/style.css
@@ -2,11 +2,7 @@
   display: flex;
   flex-direction: column;
   background: #1c1b1e;
-  height: 100vh;
-}
-
-.films{
-  margin-bottom: 2rem;
+  min-height: 100vh;
 }
 
 .texts {
